# controllers/Results.js
@@ -2,24 +2,37 @@
 
 var utils = require('../utils/writer.js');
 var Results = require('../service/ResultsService');
+var logger = require('../utils/logger')(__filename);
 
 module.exports.getAllResults = function getAllResults (req, res, next) {
   Results.getAllResults()
     .then(function (response) {
+      logger.info("Succesfully got all surveys from node cache");
       utils.writeJson(res, response);
     })
     .catch(function (response) {
-      utils.writeJson(res, response);
+      if(response == 'not found') {
+        utils.writeJson(res, '', 404);
+      }
+      else {
+        utils.writeJson(res, response, 500);
+      }
     });
 };
 
 module.exports.getResults = function getResults (req, res, next) {
-  var surveyName = req.swagger.params['surveyName'].value;
-  Results.getResults(surveyName)
+  var surveyId = req.swagger.params['surveyId'].value;
+  Results.getResults(surveyId)
     .then(function (response) {
+      logger.info("Successfully got results for survey with Id: " + surveyId);
       utils.writeJson(res, response);
     })
     .catch(function (response) {
-      utils.writeJson(res, response);
+      if(response == 'not found') {
+        utils.writeJson(res, '', 404);
+      }
+      else {
+        utils.writeJson(res, response, 500);
+      }
     });
 };
